v3/assets/css/sections.css
/* ... */
/* ========================
    WRITERS PRORAM - HERO
   ======================== */


section.sub-hero .share-a-story{
    position:relative;
    z-index:2;
    display:flex;
    flex-flow:row wrap;
    justify-content: space-between;
    align-items: center;
    margin:100px 0px;
}

section.sub-hero .share-a-story .desc{
    width: 500px;
}

section.sub-hero .share-a-story .desc h2{
    margin-bottom:25px;
}

section.sub-hero .share-a-story .desc p{
    margin-bottom:15px;
}

section.sub-hero .share-a-story .desc a{
    float:left;
    display:block;
    margin-top:10px;
}

section.sub-hero .share-a-story img{
    width: 600px;
}



/* ========================
    WRITERS PRORAM - HOW
   ======================== */


section.how .wrap > ul{
    display:flex;
    flex-flow:row wrap;
    margin-top:100px;
    justify-content: space-between;
}

section.how .wrap > ul > li{
    width: 45%;
    margin-bottom:80px;
} 

section.how .wrap > ul > li .heading{
    width: 100%;
    display:flex;
    flex-flow:row-wrap;
    align-items: center;
    margin-bottom:40px;
}

section.how .wrap > ul > li .heading img{
    width: auto;
    height: 150px;
    margin-right:60px;
}

section.how .wrap ul li ul li{
    position:relative;
    padding-left:20px;
    margin-bottom:15px;
}

section.how .wrap ul li ul li::before{
    content: "";
    display:block;
    position:absolute;
    top:7px;
    left:0px;
    width: 10px;
    height: 10px;
    background:url(../img/global/list-dot.svg) no-repeat;
    background-size:10px;
}

/* ========================
    SNOWPLOW FOR WEB - HOW
   ======================== */

section.how-web .wrap ul li p{
    margin-left:80px
}
section.how-web .wrap > ul > li .heading img{
    width: auto;
    height:200px;
    margin-right:35px;
}

/* ========================
          MAIN FORM
   ======================== */
section.main-form{
    margin-bottom:120px;
}

section.main-form .hex-3-bg{
    top:-185px;
}

section.main-form .wrap{
    display:flex;
    flex-flow:row wrap;
    justify-content: space-between;
    align-items: center;
}

section.main-form .wrap .heading{
    width: 520px;
}

section.main-form .wrap .heading h2{
    margin-bottom:15px;
}
section.main-form .wrap .heading p{
    margin-bottom:15px;
}

section.main-form .wrap form{
    width: 520px;
    padding:60px;
    box-sizing: border-box;
    -webkit-transition: all .5s ease-in-out;
    -o-transition: all .5s ease-in-out;
    transition: all .5s ease-in-out;
}

section.main-form .wrap form .form-wrap > h3{
    margin-bottom:10px;
}

section.main-form .wrap form .form-wrap > p{
    margin-bottom:40px;
}

section.main-form .wrap form .full{
    margin-bottom:20px;
}

section.main-form .wrap form .half{
    margin-bottom:20px;
}

section.main-form .wrap form  label{
    margin-bottom:10px;
}

section.main-form .wrap form  input,section.main-form .wrap form textarea{
    width:100%;
    padding:10px 20px;
    box-sizing: border-box;
    background: #FFFFFF;
    border: 1px solid #e9e9e9;
    border-radius: 4px;
    
}

section.main-form .wrap form textarea{
    max-width: 100%;
    max-height:600px;
    min-height:120px;
}


::-webkit-input-placeholder { /* Edge */
    color: #D5D6D9;
}
  
:-ms-input-placeholder { /* Internet Explorer 10-11 */
    color: #D5D6D9;
}
  
::placeholder {
    color: #D5D6D9;
}

section.main-form .wrap form button{
    float:right;
    margin-top:15px;
}

section.main-form form .thankyou{
    display:none;
}

section.main-form form .thankyou h3{
    margin-bottom:15px;
}

section.main-form form .thankyou p{
    margin-bottom:40px;
}

section.main-form form .thankyou img{
    width: 50%;
    margin:40px 0px;
}



/* ========================
          PRICING FORM
   ======================== */

section.pricing-form .hex-3-bg{
    top:-5px;
}


section.pricing-form .wrap{
    justify-content: center;
}

section.pricing-form .wrap .heading{
    width: 100%;
    text-align:center;
    padding:0% 20%;
    box-sizing: border-box;
}

section.pricing-form .wrap form{
    margin-top:60px;
    width: 960px;
}

section.pricing-form .wrap form .form-wrap .half{
    width: 47%;
    box-sizing: border-box;
}
section.pricing-form .wrap form .form-wrap > div{
    margin-bottom:40px;
}

section.pricing-form .wrap form .form-wrap > p{
    margin-bottom:60px;
}

section.pricing-form .wrap form .form-wrap > .p-small{
    width: 60%;
    margin: 20px 0px 0px 0px;
}


section.pricing-form .wrap form .form-wrap{
    display:flex;
    flex-flow: row wrap;
    justify-content: space-between;
}


section.pricing-form .thankyou{
    display:flex;
    flex-flow:row wrap;
    justify-content: center;
    text-align:center;
}



/* ========================
          TESTEMONIAL
   ======================== */

section.testemonial{
    z-index:2;
}

section.testemonial .single{
    display:flex;
    flex-flow: column;
    justify-content: center;
    text-align:center;
}

section.testemonial .single img{
    align-self:center;
    margin-bottom:20px;
}

section.testemonial .single em{
    max-width:660px;
    margin:10px 0px 30px 0px;
    align-self:center;
}


/* ========================
        CLIENTS BANNER
   ======================== */


section.testemonial .clients-banner{
    width: 100%;
    position:relative;
    margin:40px 0px 0px 0px;
    min-height:270px;
    z-index:3;
    
}

section.testemonial .clients-banner .small-clients-slider{
    width:100%; 
    display:flex;
    flex-flow:row wrap;
    justify-content: space-between;
    align-items: center;
    max-width:1200px;
    position:absolute;
    right:170px;
    top:68px;
    padding:0px 40px;
    box-sizing: border-box;
}

section.testemonial .clients-banner .slick-track{
    display:flex;
    flex-flow:row wrap;
    justify-content: space-evenly;
    align-items: center;
}


section.testemonial .clients-banner .small-clients-slider .item{
    display:flex;
    justify-content: center;
    align-items: center;
    padding:40px 0px;
}
/* ... */

